# SDRC_PT2

./: .gitignore  README.md  SMILE_LOG
coppelia_controller/: CMakeLists.txt  package.xml
coppelia_controller/config/: arm_trajectory_controller.yaml  gripper_controller.yaml  ur5e_control.yaml
coppelia_controller/launch/: coppelia_demo.launch.py
coppelia_description/: CMakeLists.txt  coppelia_description.xml  package.xml
coppelia_description/include/coppelia_description/: coppelia_sim_hardware_interface.hpp
coppelia_description/src/: coppelia_sim_hardware_interface.cpp  scene_publisher.cpp
coppelia_description/test/: test_load_coppelia_sim_hardware_interface.cpp
coppelia_description/urdf/: ur5e.urdf
coppelia_moveit/: .setup_assistant  CMakeLists.txt  package.xml
coppelia_moveit/config/: ur5e_with_robotiq85.urdf.xacro
coppelia_moveit/launch/: controllers_and_moveit.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
coppelia_msgs/: CMakeLists.txt  package.xml
coppelia_msgs/action/: CoppeliaTask.action
coppelia_pick_and_place/: CMakeLists.txt  package.xml
coppelia_pick_and_place/launch/: coppelia_pick.launch.py
coppelia_pick_and_place/src/: motion_action_server.cpp  move_action.cpp  move_action_client.cpp  pick_place_client.cpp  scena.cpp  test_action_server.cpp  test_mini.cpp
sim_ros2_interface/meta/: interfaces.txt
vision_localizer/: CMakeLists.txt  package.xml
vision_localizer/config/: object_localizer_params.yaml
vision_localizer/include/vision_localizer/: object_localizer.hpp
vision_localizer/launch/: vision_localizer.launch.py
vision_localizer/msg/: ObjectInfo.msg
vision_localizer/src/: object_localizer.cpp  object_localizer_main.cpp
