<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coppelia_pick_and_place</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ruben.malacarne@gmail.com">ruben</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_msgs</depend>
  
  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>shape_msgs</depend>

  <depend>coppelia_msgs</depend>
  <depend>vision_localizer</depend>


  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
